--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "bluebird": "^2.10.2",
-    "isomorphic-fetch": "^2.2.0"
+    "node-fetch": "^1.3.3"
   },
   "devDependencies": {
     "mocha": "^2.3.3"
