--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "bluebird": "^2.10.2",
-    "node-fetch": "^1.3.3"
+    "node-fetch": "^1.3.3",
+    "web-streams-polyfill": "git://github.com/gwicke/web-streams-polyfill.git#spec_performance_improvements"
   },
   "devDependencies": {
     "mocha": "^2.3.3"
