--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Environment for running serviceworkers in node.js, as 'isomorphic' request handlers for clients without SW support.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha --ui exports test/index.js"
+    "test": "mocha --ui exports --no-timeouts test/index.js"
   },
   "repository": {
     "type": "git",
