--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "bluebird": "^2.10.2",
-    "node-fetch-polyfill": "^2.0.1",
+    "dom-urls": "^1.1.0",
+    "node-fetch-polyfill": "^2.0.4",
     "node-web-streams": "^0.2.1"
   },
   "devDependencies": {
